# ChangeLog for dev-java/appframework
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jan 2008; <alistair@gentoo.org> +metadata.xml,
  +appframework-1.03.ebuild:
  Adding appframework
