@@ -1,4 +1,4 @@
 DIST AppFramework-1.03-src.zip 413438 RMD160 860b7c76b1b2e25a55e65d2e66d10dab80df15cc SHA1 9ce96108b657a091da54a5a566d85e5cfdfff56e SHA256 9fad98a0b70e6c67cc38dfe9d01b00fe7b7fedf51fa50ac68e7a86d7d1c38fcd
-EBUILD appframework-1.03.ebuild 1015 RMD160 8901c6415cdc9d01a3737acac23f6c7dd50d702a SHA1 38c65c260ed12e0be79217dcd7e70e4236d2517e SHA256 0ecd541578ffc54e5f90d6d849ab9c01aebb5451feefd73c6d75a800bc268bbb
-MISC ChangeLog 226 RMD160 dd8ae109f589964d9822bb1610b35912868f5ead SHA1 9db4c53b64c5da442067a2518ed10c14b2f23095 SHA256 4866730e48fa9ec42c224e0ffc8f62b1efd57f7077a57caf906e217654c8f672
+EBUILD appframework-1.03.ebuild 1509 RMD160 99a361ff2689077739511bf40316ad8c9561404b SHA1 4021003085dcd7d3e0890492642c54b52bfc7ed3 SHA256 06da44768eb75d6574f4614729a11d41a49a95941dc2d90e94133be198f07e71
+MISC ChangeLog 340 RMD160 8b5ec4e9e118bc3b34fb4d448b043c41b6f43d76 SHA1 d56db5db2bafeea471dc1d2cf1c04419c21e1a54 SHA256 6dfc59b34e24fdd0af4a520a308cbcf90cfbbcc451e93c319a2532d2efec99dd
 MISC metadata.xml 912 RMD160 f4e8ee775fe7d04ad24d6c936849aee21bad3b0d SHA1 83acee40d2aa86b7bc5a46599f069ddbb115fd1d SHA256 eb3a923ee0473f7dd1cc727aa7c44d1a49755de1a10a4c93e22b22c49ee4db57
