@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Jun 2008; Serkan Kaba <serkan@gentoo.org> appframework-1.03.ebuild:
+  Fix tests and javadoc. Add src_test()
+
   08 Jan 2008; <alistair@gentoo.org> +metadata.xml,
   +appframework-1.03.ebuild:
   Adding appframework
